--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,16 +60,16 @@
           <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0 text-center">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">
+                <a class="nav-link active" aria-current="page" href="/index">
                     <i class='bx bxs-home'></i>
                     Home
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/customerList">See Customer List</a>
+                <a class="nav-link" href="/index">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/customerRegister">New Customer Register</a>
+                <a class="nav-link" href="/#">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -106,7 +106,7 @@
 					<li><i class="fa-regular fa-circle-check"></i> Roadside Assistance: Yes</li>
 				</ul>
 				<br><br>
-				<button class="buy-btn"><a th:href="@{/customerRegisterForm}">Register Now</a></button>
+				<button class="buy-btn"><a th:href="@{/customerRegister}">Register Now</a></button>
 			</div>
 
 			<div class="product text-center col-lg-3 col-md-4 col-12">
@@ -121,7 +121,7 @@
 					<li><i class="fa-regular fa-circle-check"></i> Discounts for Health Check-ups</li>
 				</ul>
 				<br><br>
-				<button class="buy-btn"><a th:href="@{/customerRegisterForm}">Register Now</a></button>
+				<button class="buy-btn"><a th:href="@{/customerRegister}">Register Now</a></button>
 			</div>
 			<div class="product text-center col-lg-3 col-md-4 col-12">
 				<img class="img-fluid mb-3" src="img/travel.jpg" alt="">
@@ -135,7 +135,7 @@
 					<li><i class="fa-regular fa-circle-check"></i> Lost Baggage and Documents</li>
 				</ul>
 				<br><br>
-				<button class="buy-btn"><a th:href="@{/customerRegisterForm}">Register Now</a></button>
+				<button class="buy-btn"><a th:href="@{/customerRegister}">Register Now</a></button>
 			</div>
 			<div class="product text-center col-lg-3 col-md-4 col-12">
 				<img class="img-fluid mb-3" src="img/dask.jpg" alt="">
@@ -149,7 +149,7 @@
 					<li><i class="fa-regular fa-circle-check"></i> Safety Features Discounts</li>
 				</ul>
 				<br><br>
-				<button class="buy-btn"><a th:href="@{/customerRegisterForm}">Register Now</a></button>
+				<button class="buy-btn"><a th:href="@{/customerRegister}">Register Now</a></button>
 			</div>
 
 		</div>
@@ -215,11 +215,13 @@
 				</div>
 				<div>
 					<h6 class="text-uppercase">Github</h6>
-					<p>https://github.com/edamuutlu</p>
+					<p>https://github.com/edamuutlu</p>  
+					<p>https://github.com/nuricanbrdmr</p>
 				</div>
 				<div>
 					<h6 class="text-uppercase">Email</h6>
 					<p>edamuutlu@gmail.com</p>
+					<p>nuricanb6@gmail.com</p>
 				</div>
 			</div>
 			<div class="footer-one col-lg-3 col-md-6 col-12">
