--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
     
 </head>
 <body ng-app="myApp" ng-controller="LoginController">
-    <!--Navbar-->
+   <!--Navbar-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid px-5">
           <a class="navbar-brand" href="#">Logo</a>
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="/index">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="/#">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -53,6 +53,7 @@
         </div>
       </nav>
 	<!--	End Navbar-->
+	
     <div class="page-wrapper bg-gra-02">
         <div class="wrapper">
             <div class="card">
@@ -110,6 +111,61 @@
             </div>
         </div>
     </div>
+    
+    <!-- Footer -->
+	<footer class="mt-4 py-4">
+		<div class="row container mx-auto pt-4">
+			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
+				<img src="img/logo.png" alt="">
+				<p class="pt-3">Protect your future with reliable insurance coverage from our trusted insurance
+					company..</p>
+			</div>
+			<div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
+				<h5 class="pb-2">Featured</h5>
+				<ul class="text-uppercase list-unstyled">
+					<li><a href="#">Traffic Insurance</a></li>
+					<li><a href="#">Comprehensive Insurance</a></li>
+					<li><a href="#">Health Insurance</a></li>
+					<li><a href="#">Earthquake Insurance</a></li>
+				</ul>
+			</div>
+			<div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
+				<h5 class="pb-2">Contact Us</h5>
+				<div>
+					<h6 class="text-uppercase">Address</h6>
+					<p>Istanbul, Turkey</p>
+				</div>
+				<div>
+					<h6 class="text-uppercase">Github</h6>
+					<p>https://github.com/edamuutlu</p>  
+					<p>https://github.com/nuricanbrdmr</p>
+				</div>
+				<div>
+					<h6 class="text-uppercase">Email</h6>
+					<p>edamuutlu@gmail.com</p>
+					<p>nuricanb6@gmail.com</p>
+				</div>
+			</div>
+			<div class="footer-one col-lg-3 col-md-6 col-12">
+				<div class="col-lg-4 col-md-6 col-12 mb-3">
+					<h5 class="pb-2">Follow Us</h5>
+					<a href="#"><i class="fa-brands fa-lg fa-facebook"></i></a>
+					<a href="#"><i class="fa-brands fa-lg fa-instagram"></i></a>
+					<a href="#"><i class="fa-brands fa-lg fa-twitter"></i></a>
+				</div>
+				<div class="col-lg-3 col-md-6 col-12 mb-4">
+					<img src="img/payment.png" alt="">
+				</div>
+			</div>
+			<div class="copyright mt-2">
+				<div class="row container mx-auto">
+					<div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
+						<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
     <script src="/js/app.js"></script>
 </body>
