footer Fixed Update

--- a/src/main/resources/templates/carList.html
+++ b/src/main/resources/templates/carList.html
@@ -108,7 +108,7 @@
       </nav>
 	<!--	End Navbar-->
 	
-	<div class="container mt-5">
+	<div class="container list-page-main mt-5">
 		<!-- Modal -->
 		<div class="modal fade" id="myModal" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="myModalTitle"
 			aria-hidden="true" th:if="${showText}">
@@ -178,7 +178,7 @@
 	</div>
 
 	<!-- Footer -->
-	<footer class="mt-4 py-4">
+	<footer>
 		<div class="row container mx-auto pt-4">
 			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
