--- a/src/main/resources/templates/seeCarInsuranceDetails.html
+++ b/src/main/resources/templates/seeCarInsuranceDetails.html
@@ -80,7 +80,7 @@
       </nav>
 	<!--	End Navbar-->
 
-	<div class="container mt-4">
+	<div class="container list-page-main mt-4">
 		<div class="alert alert-warning" role="alert" th:if="${showText}"> An insurance for this car has already been
 			defined! </div>
 		<div class="alert alert-warning" role="alert" th:if="${showAlert}"> An insurance for this car has already been
@@ -175,7 +175,7 @@
 	</div>
 
 	<!-- Footer -->
-	<footer class="mt-4 py-4">
+	<footer>
 		<div class="row container mx-auto pt-4">
 			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
