--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -56,6 +56,9 @@ body .navbar-light .navbar-toggler {
   outline: none;
   border: none;
 }
+.list-page-main{
+	min-height: 441px;
+}
 
 .container-register {
 	display: block;
