--- a/src/main/resources/templates/carEdit.html
+++ b/src/main/resources/templates/carEdit.html
@@ -52,7 +52,7 @@
 	<!--	End Navbar-->
 
 
-	<section id="featured" class="my-5 pt-5">
+	<section id="featured list-page-main" class="my-5 pt-5">
 		<div class="container-register mt-5 py-5" ng-controller="trafficInsuranceFormController">
 			
 			<div class="textIntro">
@@ -127,7 +127,7 @@
 	</section>
 	
 	<!-- Footer -->
-	<footer class="mt-4 py-4">
+	<footer>
 		<div class="row container mx-auto pt-4">
 			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
