--- a/src/main/resources/templates/carInsuranceRefund.html
+++ b/src/main/resources/templates/carInsuranceRefund.html
@@ -78,7 +78,7 @@
 		<hr>
 	</section>
 
-	<section id="cart-bottom" class="container mt-4">
+	<section id="cart-bottom list-page-main" class="container mt-4">
 		<div class="row">
 			<div class="total col-lg-6 col-md-6 col-12">
 				<div>
@@ -118,7 +118,7 @@
 	</section>
 
 	<!-- Footer -->
-	<footer class="mt-4 py-4">
+	<footer>
 		<div class="row container mx-auto pt-4">
 			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
