--- a/src/main/resources/templates/homeList.html
+++ b/src/main/resources/templates/homeList.html
@@ -104,7 +104,7 @@
       </nav>
 	<!--	End Navbar-->
 
-	<div class="container mt-5">
+	<div class="container list-page-main">
 		<div class="modal fade" id="myModal" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
 			aria-labelledby="myModalTitle" aria-hidden="true" th:if="${showText}">
 			<div class="modal-dialog" role="document">
@@ -174,7 +174,7 @@
 	</div>
 	
 	<!-- Footer -->
-	<footer class="mt-4 py-4">
+	<footer>
 		<div class="row container mx-auto pt-4">
 			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
