--- a/src/main/resources/templates/carEdit.html
+++ b/src/main/resources/templates/carEdit.html
@@ -52,7 +52,7 @@
 	<!--	End Navbar-->
 
 
-	<section id="featured list-page-main" class="my-5 pt-5">
+	<section id="featured" class="list-page-main my-5 pt-5">
 		<div class="container-register mt-5 py-5" ng-controller="trafficInsuranceFormController">
 			
 			<div class="textIntro">
