--- a/src/main/resources/templates/carList.html
+++ b/src/main/resources/templates/carList.html
@@ -166,7 +166,7 @@
 					<td th:text="${c.engineSize}"></td>
 					<td th:text="${c.seatCapacity}"></td>
 					
-					<td><button class="mx-auto"><a th:href="@{/trafficInsuranceRefund/{id}(id=${c.id})}"><i id="icon-trash"
+					<td><button class="mx-auto"><a th:href="@{/deleteCar/{id}(id=${c.id})}"><i id="icon-trash"
 									class="bx bx-trash"></i></a></button></td>
 					<td><button class="mx-auto"><a th:href="@{/seeCarInsuranceDetails/{id}(id=${c.id})}"><i
 									class="fa-solid fa-ellipsis"></i></a></button></td>
