--- a/src/main/resources/templates/trafficInsuranceRefund.html
+++ b/src/main/resources/templates/trafficInsuranceRefund.html
@@ -80,7 +80,7 @@
 		<hr>
 	</section>
 
-	<section id="cart-bottom list-page-main" class="container mt-4">
+	<section id="cart-bottom" class="list-page-main container mt-4">
 		<div class="row">
 			<div class="total col-lg-6 col-md-6 col-12">
 				<div>
