--- a/src/main/resources/templates/carList.html
+++ b/src/main/resources/templates/carList.html
@@ -1,64 +1,24 @@
-<!doctype html>
-<html lang="en" xmlns:th="https://www.thymeleaf.com">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>SBM Home</title>
-	
-	<!-- Bootstrap, Popper.js ve jQuery kütüphaneleri -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-		crossorigin="anonymous"></script>
-		
-	<!-- Font Awesome ve Phosphor Icons -->	
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-	<script src="https://unpkg.com/@phosphor-icons/web"></script>
-	
-	<!-- Bootstrap CSS -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-		
-	<!-- Boxicons CSS -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>User Page</title>
+	<!-- Bootsrapt -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- İcon -->
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-	
-	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
-	<link href="https://css.gg/css" rel="stylesheet" />
-	
-	<style>
-		#icon-trash {
-			color: red;
-			font-size: 22px;
-		}
-
-		#icon-trash:hover {
-			color: rgb(255, 62, 62);
-		}
-
-		#icon-edit {
-			color: blue;
-			font-size: 20px;
-		}
-
-		#icon-edit:hover {
-			color: rgb(69, 112, 222);
-		}
-
-		button {
-			border: none;
-			background: none;
-			margin-left: 50px;
-		}
-	</style>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<!-- CSS -->
+	<link rel="stylesheet" th:href="@{/css/register.css}" href="src/main/resources/static/css/register.css">
+	<!-- Angularjs -->
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 
 	<script>
-		
+
 		window.onload = function () {
 			$(document).ready(function () {
 				$('#myModal').modal('show');
@@ -66,182 +26,201 @@
 		};
 
 	</script>
-
-
 </head>
+<!--Navbar-->
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+	<div class="container-fluid px-5">
+		<a class="navbar-brand" href="#">Logo</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+			<ul class="navbar-nav mb-2 mb-lg-0 text-center">
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="/index">
+						<i class='bx bxs-home'></i>
+						Home
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/index">Products</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Contact Us</a>
+				</li>
+			</ul>
+		</div>
+		<div class="operations">
+			<a href="">
+				<i class='bx bxs-user-circle login-icon'></i>
+				Login
+			</a>
+			<a href="">
+				<i class='bx bxs-user-plus register-icon'></i>
+				Register
+			</a>
+		</div>
+	</div>
+</nav>
+<!--	End Navbar-->
 
-<body>
-	<!--Navbar-->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid px-5">
-          <a class="navbar-brand" href="#">Logo</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-            <ul class="navbar-nav mb-2 mb-lg-0 text-center">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index">
-                    <i class='bx bxs-home'></i>
-                    Home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/index">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/#">Contact Us</a>
-              </li>
-            </ul>
-          </div>
-          <div class="operations">
-            <a href="/login">
-                <i class='bx bxs-user-circle login-icon'></i>
-                Login
-            </a>
-            <a href="/customerRegister">
-                <i class='bx bxs-user-plus register-icon'></i>
-                Register
-            </a>
-          </div>
-        </div>
-      </nav>
-	<!--	End Navbar-->
+<div class="user-page-wrapper">
 	
-	<div class="container list-page-main mt-5">
-		<!-- Modal -->
-		<div class="modal fade" id="myModal" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="myModalTitle"
-			aria-hidden="true" th:if="${showText}">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="myModalTitle">Bildirim</h5>
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div>
-					<div class="modal-body">
-						<p>Listelenen Plakalı Araçlarınızın Sigorta Süresi Bitmiştir:</p>
-						<ul>
-							<li th:each="data : ${expiredCars}" th:text="${data.getPlate1() + ' ' + data.getPlate2()+ ' ' + data.getPlate3()}"></li>
-						</ul>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-					</div>
-				</div>
-			</div>
-		</div>				
 
-
-		<table class="table table-hover text-center">
-			<thead>
-				<tr>
-					<th scope="col">Id</th>
-					<th scope="col">Customer Id</th>
-					<th scope="col">License Plate</th>
-					<th scope="col">Usage Type</th>
-					<th scope="col">Purpose of Usage</th>
-					<th cope="col">Brand</th>
-					<th cope="col">Fuel Type</th>
-					<th cope="col">Engine Size</th>
-					<th scope="col">Seating Capacity</th>
-					<th scope="col">Delete</th>
-					<th scope="col">See Insurance Details</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="c :${car}">
-					<td th:text="${c.id}"></td>
-					<td th:text="${c.customerId}"></td>
-					<td>
-						<span th:text="${c.plate1}"></span>
-						<span th:text="${c.plate2}"></span>
-						<span th:text="${c.plate3}"></span>
-					</td>
-					<td th:text="${c.type}"></td>
-					<td th:text="${c.purpose}"></td>
-					<td th:text="${c.brand}"></td>
-					<td th:text="${c.fuelType}"></td>
-					<td th:text="${c.engineSize}"></td>
-					<td th:text="${c.seatCapacity}"></td>
-					
-					<td><button class="mx-auto"><a th:href="@{/deleteCar/{id}(id=${c.id})}"><i id="icon-trash"
-									class="bx bx-trash"></i></a></button></td>
-					<td><button class="mx-auto"><a th:href="@{/seeCarInsuranceDetails/{id}(id=${c.id})}"><i
-									class="fa-solid fa-ellipsis"></i></a></button></td>
-
-				</tr>
-			</tbody>
-		</table>
-	</div>
-	</div>
-
-	<!-- Footer -->
-	<footer>
-		<div class="row container mx-auto pt-4">
-			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
-				<img src="img/logo.png" alt="">
-				<p class="pt-3">Protect your future with reliable insurance coverage from our trusted insurance
-					company..</p>
-			</div>
-			<div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
-				<h5 class="pb-2">Featured</h5>
-				<ul class="text-uppercase list-unstyled">
-					<li><a href="#">Traffic Insurance</a></li>
-					<li><a href="#">Comprehensive Insurance</a></li>
-					<li><a href="#">Health Insurance</a></li>
-					<li><a href="#">Earthquake Insurance</a></li>
-				</ul>
-			</div>
-			<div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
-				<h5 class="pb-2">Contact Us</h5>
-				<div>
-					<h6 class="text-uppercase">Address</h6>
-					<p>Istanbul, Turkey</p>
-				</div>
-				<div>
-					<h6 class="text-uppercase">Github</h6>
-					<p>https://github.com/edamuutlu</p>  
-					<p>https://github.com/nuricanbrdmr</p>
-				</div>
-				<div>
-					<h6 class="text-uppercase">Email</h6>
-					<p>edamuutlu@gmail.com</p>
-					<p>nuricanb6@gmail.com</p>
-				</div>
-			</div>
-			<div class="footer-one col-lg-3 col-md-6 col-12">
-				<div class="col-lg-4 col-md-6 col-12 mb-3">
-					<h5 class="pb-2">Follow Us</h5>
-					<a href="#"><i class="fa-brands fa-lg fa-facebook"></i></a>
-					<a href="#"><i class="fa-brands fa-lg fa-instagram"></i></a>
-					<a href="#"><i class="fa-brands fa-lg fa-twitter"></i></a>
-				</div>
-				<div class="col-lg-3 col-md-6 col-12 mb-4">
-					<img src="img/payment.png" alt="">
-				</div>
-			</div>
-			<div class="copyright mt-2">
-				<div class="row container mx-auto">
-					<div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
-						<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
+	<div class="user-page-main" th:each="c :${customer}">
+		<div class="user-title">
+			<span class="username-text" th:text="${c.username}"></span>
+		</div>
+		<div class="user-page">
+			<!-- User Bilgileri -->
+			<div class="user-details">
+				<div class="card mb-4">
+					<div class="card-body text-center">
+						<img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp"
+							alt="avatar" class="rounded-circle img-fluid" style="width: 150px;">
+						<h5 class="my-3" th:text="${c.firstname}"></h5>
+						<table class="table">
+							<tbody>
+								<tr>
+									<th scope="row">First Name</th>
+									<td th:text="${c.firstname}"></td>
+								</tr>
+								<tr>
+									<th scope="row">Last Name</th>
+									<td th:text="${c.lastname}"></td>
+								</tr>
+								<tr>
+									<th scope="row">Phone Number</th>
+									<td th:text="${c.phoneNumber}"></td>
+								</tr>
+								<tr>
+									<th scope="row">Username</th>
+									<td th:text="${c.username}"></td>
+								</tr>
+								<tr>
+									<th scope="row">T.C.</th>
+									<td th:text="${c.tc}"></td>
+								</tr>
+								<tr>
+									<th scope="row">Email</th>
+									<td th:text="${c.email}"></td>
+								</tr>
+							</tbody>
+						</table>
+						<div class="user-settings mb-2">
+							<a type="button" class="btn btn-outline-info"
+								th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}">Edit</a>
+							<a type="button" class="btn btn-outline-danger ms-1"
+								th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}">Delete</a>
+						</div>
 					</div>
+				</div>
+			</div>
+
+			<!-- User Tablo -->
+			<div class="user-insurances">
+				<div class="card mb-4">
+					<table class="table">
+						<thead>
+							<tr>
+								<th scope="col">Id</th>
+								<th scope="col">Customer Id</th>
+								<th scope="col">License Plate</th>
+								<th scope="col">Usage Type</th>
+								<th scope="col">Purpose of Usage</th>
+								<th cope="col">Brand</th>
+								<th cope="col">Fuel Type</th>
+								<th cope="col">Engine Size</th>
+								<th scope="col">Seating Capacity</th>
+								<th scope="col">Delete</th>
+								<th scope="col">See Insurance Details</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr th:each="c :${car}">
+								<td th:text="${c.id}"></td>
+								<td th:text="${c.customerId}"></td>
+								<td>
+									<span th:text="${c.plate1}"></span>
+									<span th:text="${c.plate2}"></span>
+									<span th:text="${c.plate3}"></span>
+								</td>
+								<td th:text="${c.type}"></td>
+								<td th:text="${c.purpose}"></td>
+								<td th:text="${c.brand}"></td>
+								<td th:text="${c.fuelType}"></td>
+								<td th:text="${c.engineSize}"></td>
+								<td th:text="${c.seatCapacity}"></td>
+
+								<td><button class="mx-auto"><a th:href="@{/deleteCar/{id}(id=${c.id})}"><i
+												id="icon-trash" class="bx bx-trash"></i></a></button></td>
+								<td><button class="mx-auto"><a th:href="@{/seeCarInsuranceDetails/{id}(id=${c.id})}"><i
+												class="fa-solid fa-ellipsis"></i></a></button></td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
 			</div>
 		</div>
-	</footer>
-	
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-		integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
-		integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-		crossorigin="anonymous"></script>
-	<script src="/js/app.js"></script>
+	</div>
+</div>
+
+<footer class="py-4">
+	<div class="row container mx-auto pt-4">
+		<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
+			<img src="img/logo.png" alt="">
+			<p class="pt-3">Protect your future with reliable insurance coverage from our trusted insurance
+				company..</p>
+		</div>
+		<div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
+			<h5 class="pb-2">Featured</h5>
+			<ul class="text-uppercase list-unstyled">
+				<li><a href="#">Traffic Insurance</a></li>
+				<li><a href="#">Comprehensive Insurance</a></li>
+				<li><a href="#">Health Insurance</a></li>
+				<li><a href="#">Earthquake Insurance</a></li>
+			</ul>
+		</div>
+		<div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
+			<h5 class="pb-2">Contact Us</h5>
+			<div>
+				<h6 class="text-uppercase">Address</h6>
+				<p>Istanbul, Turkey</p>
+			</div>
+			<div>
+				<h6 class="text-uppercase">Github</h6>
+				<p>https://github.com/edamuutlu</p>
+				<p>https://github.com/nuricanbrdmr</p>
+			</div>
+			<div>
+				<h6 class="text-uppercase">Email</h6>
+				<p>edamuutlu@gmail.com</p>
+				<p>nuricanb6@gmail.com</p>
+			</div>
+		</div>
+		<div class="footer-one col-lg-3 col-md-6 col-12">
+			<div class="col-lg-4 col-md-6 col-12 mb-3">
+				<h5 class="pb-2">Follow Us</h5>
+				<a href="#"><i class="fa-brands fa-lg fa-facebook"></i></a>
+				<a href="#"><i class="fa-brands fa-lg fa-instagram"></i></a>
+				<a href="#"><i class="fa-brands fa-lg fa-twitter"></i></a>
+			</div>
+			<div class="col-lg-3 col-md-6 col-12 mb-4">
+				<img src="img/payment.png" alt="">
+			</div>
+		</div>
+		<div class="copyright mt-2">
+			<div class="row container mx-auto">
+				<div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
+					<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</footer>
+
+<script src="/js/app.js"></script>
 </body>
 
 </html>
