--- a/src/main/resources/templates/customerRegister.html
+++ b/src/main/resources/templates/customerRegister.html
@@ -305,8 +305,8 @@
 		</div>
 	</div>
 	
-		<!-- Footer -->
-	<footer class="mt-4 py-4">
+	<!-- Footer -->
+	<footer class="py-4">
 		<div class="row container mx-auto pt-4">
 			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
