--- a/src/main/resources/templates/userPage.html
+++ b/src/main/resources/templates/userPage.html
@@ -9,6 +9,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<!-- İcon -->
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -16,49 +18,141 @@
 	<link rel="stylesheet" th:href="@{/css/register.css}" href="src/main/resources/static/css/register.css">
 	<!-- Angularjs -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+	<script>
+	    window.onload = function () {
+	        var myModal = new bootstrap.Modal(document.getElementById('myModal'));
+	        myModal.show(); 
+	
+	        // İlk modalı göstermek için
+	        $('#expiredModal').modal('show');
+	
+	        // Diğer modalı göstermek için
+	        $('#deadlineModal').modal('show');
+	    };
+	</script>
+
 </head>
-<!--Navbar-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-	<div class="container-fluid px-5">
-		<a class="navbar-brand" href="#">Logo</a>
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-			<ul class="navbar-nav mb-2 mb-lg-0 text-center">
-				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="/index">
-						<i class='bx bxs-home'></i>
-						Home
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="/index">Products</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Contact Us</a>
-				</li>
-			</ul>
+
+	<!--Navbar-->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+		<div class="container-fluid px-5">
+			<a class="navbar-brand" href="#">Logo</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+				<ul class="navbar-nav mb-2 mb-lg-0 text-center">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/index">
+							<i class='bx bxs-home'></i>
+							Home
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/index">Products</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact Us</a>
+					</li>
+				</ul>
+			</div>
+			<div class="operations">
+				<a href="/login">
+					<i class='bx bxs-user-circle login-icon'></i>
+					Login
+				</a>
+				<a href="/customerRegister">
+					<i class='bx bxs-user-plus register-icon'></i>
+					Register
+				</a>
+			</div>
 		</div>
-		<div class="operations">
-			<a href="/login">
-				<i class='bx bxs-user-circle login-icon'></i>
-				Login
-			</a>
-			<a href="/customerRegister">
-				<i class='bx bxs-user-plus register-icon'></i>
-				Register
-			</a>
-		</div>
-	</div>
-</nav>
-<!--	End Navbar-->
+	</nav>
+	<!--	End Navbar-->
 
 <div class="user-page-wrapper">
 	<div class="user-page-main" th:each="c :${customer}">
+		<!-- Car Modal -->
+		<div class="modal fade" id="myModal" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
+			aria-labelledby="myModalTitle" aria-hidden="true" th:if="${showText}">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="myModalTitle">Bildirim</h5>
+						<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<p>Listelenen Plakalı Araçlarınızın Sigorta Süresi Bitmiştir:</p>
+						<ul>
+							<li th:each="data : ${expiredCars}"
+								th:text="${data.getPlate1() + ' ' + data.getPlate2()+ ' ' + data.getPlate3()}"></li>
+						</ul>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<!-- Health Modal -->
+		<div class="modal fade" id="deadlineModal" data-backdrop="static" data-keyboard="false" tabindex="-1"
+			role="dialog" aria-labelledby="myModalTitle" aria-hidden="true" th:if="${showDeadlineAlert}">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="myModalTitle">Bildirim</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<p>Sağlık bilgilerinizin güncellenmesi gerektiği için lütfen devam seçeneğinden forma gidiniz.
+						</p>
+					</div>
+					<div class="modal-footer">
+						<a th:href="@{/healthInsuranceUpdate/{id}(id=${healthId})}" class="btn btn-secondary">Devam
+							Et</a>
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="modal fade" id="expiredModal" data-backdrop="static" data-keyboard="false" tabindex="-1"
+			role="dialog" aria-labelledby="myModalTitle" aria-hidden="true" th:if="${showExpiredAlert}">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="myModalTitle">Bildirim</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<p>Listelenen ID ye Sahip Sağlık Sigortalarınızın Sigorta Süresi Bitmiştir:</p>
+						<ul>
+							<li th:each="data : ${expiredHealthInsurance}" th:text="${data.getHealthId()}"></li>
+						</ul>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<!-- Home Modal -->
+		
+
 		<div class="user-title">
-			<span class="username-text">Nuricanbrdmr</span>
+			<span class="username-text" th:text="${c.username}"></span>
 		</div>
 		<div class="user-page">
 			<!-- User Bilgileri -->
@@ -112,18 +206,18 @@
 					<ul class="nav nav-tabs" id="myTab" role="tablist">
 						<li class="nav-item" role="presentation">
 							<button class="nav-link active" id="health-tab" data-bs-toggle="tab"
-								data-bs-target="#health-tab-pane" type="button" role="tab" aria-controls="health-tab-pane"
-								aria-selected="true">Health Info</button>
+								data-bs-target="#health-tab-pane" type="button" role="tab"
+								aria-controls="health-tab-pane" aria-selected="true">Health Info</button>
 						</li>
 						<li class="nav-item" role="presentation">
-							<button class="nav-link" id="home-tab" data-bs-toggle="tab"
-								data-bs-target="#home-tab-pane" type="button" role="tab"
-								aria-controls="home-tab-pane" aria-selected="false">Home Info</button>
+							<button class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane"
+								type="button" role="tab" aria-controls="home-tab-pane" aria-selected="false">Home
+								Info</button>
 						</li>
 						<li class="nav-item" role="presentation">
-							<button class="nav-link" id="car-tab" data-bs-toggle="tab"
-								data-bs-target="#car-tab-pane" type="button" role="tab"
-								aria-controls="car-tab-pane" aria-selected="false">Car Info</button>
+							<button class="nav-link" id="car-tab" data-bs-toggle="tab" data-bs-target="#car-tab-pane"
+								type="button" role="tab" aria-controls="car-tab-pane" aria-selected="false">Car
+								Info</button>
 						</li>
 					</ul>
 					<div class="tab-content" id="myTabContent">
