--- a/src/main/resources/templates/customerRegister.html
+++ b/src/main/resources/templates/customerRegister.html
@@ -40,7 +40,7 @@
 
 <body ng-app="myApp" ng-controller="registerFormController">
 	<!--Navbar-->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid px-5">
           <a class="navbar-brand" href="#">Logo</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,7 +77,7 @@
 	<!--	End Navbar-->
 	
 	<div class="page-wrapper bg-gra-02">
-		<div class="wrapper">
+		<div class="wrapper py-5">
 			<div class="card">
 				<div class="card-body">
 					<h2 class="title">Customer Registration Form</h2>
