--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
 </head>
 <body ng-app="myApp" ng-controller="LoginController">
    <!--Navbar-->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid px-5">
           <a class="navbar-brand" href="#">Logo</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,7 +55,7 @@
 	<!--	End Navbar-->
 	
     <div class="page-wrapper bg-gra-02">
-        <div class="wrapper">
+        <div class="wrapper py-5">
             <div class="card">
                 <div class="card-body">
                     <h2 class="title">Login</h2>
