Add Get Insurance Quote

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,6 +22,8 @@
 	
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<!-- Boxicons CSS -->
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 		
 	<link rel="stylesheet" href="" th:href="@{/css/home.css}">
 	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
@@ -89,7 +91,7 @@
 	<!--	End Navbar-->
 
 	<section id="featured" class="my-5 py-5">
-		<div class="container mt-5 py-5">
+		<div class="container">
 			<h2 class="font-weight-bold">Address of Trust in Insurance</h2>
 			<hr>
 			<p>Here you can check out our insurance options.</p>
@@ -126,57 +128,59 @@
 	</section>
 
 	<!-- Footer -->
-	<footer class="mt-4 py-4">
-		<div class="row container mx-auto pt-4">
-			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
-				<img src="img/logo.png" alt="">
-				<p class="pt-3">Protect your future with reliable insurance coverage from our trusted insurance
-					company..</p>
+<footer class="py-4">
+	<div class="row container mx-auto pt-4">
+		<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
+			<img src="img/logo.png" alt="">
+			<p class="pt-3">Protect your future with reliable insurance coverage from our trusted insurance
+				company..</p>
+		</div>
+		<div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
+			<h5 class="pb-2">Featured</h5>
+			<ul class="text-uppercase list-unstyled">
+				<li><a href="#">Traffic Insurance</a></li>
+				<li><a href="#">Comprehensive Insurance</a></li>
+				<li><a href="#">Health Insurance</a></li>
+				<li><a href="#">Earthquake Insurance</a></li>
+			</ul>
+		</div>
+		<div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
+			<h5 class="pb-2">Contact Us</h5>
+			<div>
+				<h6 class="text-uppercase">Address</h6>
+				<p>Istanbul, Turkey</p>
 			</div>
-			<div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
-				<h5 class="pb-2">Featured</h5>
-				<ul class="text-uppercase list-unstyled">
-					<li><a href="#">Traffic Insurance</a></li>
-					<li><a href="#">Comprehensive Insurance</a></li>
-					<li><a href="#">Health Insurance</a></li>
-					<li><a href="#">Earthquake Insurance</a></li>
-				</ul>
+			<div>
+				<h6 class="text-uppercase">Github</h6>
+				<p>https://github.com/edamuutlu</p>
+				<p>https://github.com/nuricanbrdmr</p>
 			</div>
-			<div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
-				<h5 class="pb-2">Contact Us</h5>
-				<div>
-					<h6 class="text-uppercase">Address</h6>
-					<p>Istanbul, Turkey</p>
-				</div>
-				<div>
-					<h6 class="text-uppercase">Github</h6>
-					<p>https://github.com/edamuutlu</p>
-				</div>
-				<div>
-					<h6 class="text-uppercase">Email</h6>
-					<p>edamuutlu@gmail.com</p>
-				</div>
+			<div>
+				<h6 class="text-uppercase">Email</h6>
+				<p>edamuutlu@gmail.com</p>
+				<p>nuricanb6@gmail.com</p>
 			</div>
-			<div class="footer-one col-lg-3 col-md-6 col-12">
-				<div class="col-lg-4 col-md-6 col-12 mb-3">
-					<h5 class="pb-2">Follow Us</h5>
-					<a href="#"><i class="fa-brands fa-lg fa-facebook"></i></a>
-					<a href="#"><i class="fa-brands fa-lg fa-instagram"></i></a>
-					<a href="#"><i class="fa-brands fa-lg fa-twitter"></i></a>
-				</div>
-				<div class="col-lg-3 col-md-6 col-12 mb-4">
-					<img src="img/payment.png" alt="">
-				</div>
+		</div>
+		<div class="footer-one col-lg-3 col-md-6 col-12">
+			<div class="col-lg-4 col-md-6 col-12 mb-3">
+				<h5 class="pb-2">Follow Us</h5>
+				<a href="#"><i class="fa-brands fa-lg fa-facebook"></i></a>
+				<a href="#"><i class="fa-brands fa-lg fa-instagram"></i></a>
+				<a href="#"><i class="fa-brands fa-lg fa-twitter"></i></a>
 			</div>
-			<div class="copyright mt-2">
-				<div class="row container mx-auto">
-					<div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
-						<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
-					</div>
+			<div class="col-lg-3 col-md-6 col-12 mb-4">
+				<img src="img/payment.png" alt="">
+			</div>
+		</div>
+		<div class="copyright mt-2">
+			<div class="row container mx-auto">
+				<div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
+					<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
 				</div>
 			</div>
 		</div>
-	</footer>
+	</div>
+</footer>
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
