--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -338,6 +338,7 @@ body .user-page-wrapper .user-page-main {
 body .user-page-wrapper .user-page-main .user-title {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
   height: 5%;
   background-color: #fafafa;
@@ -346,6 +347,9 @@ body .user-page-wrapper .user-page-main .user-title {
   padding: 1rem;
   margin-bottom: 10px;
   box-shadow: 3px 2px 6px 0px rgba(0, 0, 0, 0.3);
+}
+body .user-page-wrapper .user-page-main .user-title .select-type span {
+  font-size: 14px;
 }
 body .user-page-wrapper .user-page-main .user-page {
   width: 100%;
