foreign key added

--- a/src/main/resources/templates/carList.html
+++ b/src/main/resources/templates/carList.html
@@ -53,11 +53,11 @@
 			</ul>
 		</div>
 		<div class="operations">
-			<a href="">
+			<a href="/login">
 				<i class='bx bxs-user-circle login-icon'></i>
 				Login
 			</a>
-			<a href="">
+			<a href="/customerRegister">
 				<i class='bx bxs-user-plus register-icon'></i>
 				Register
 			</a>
