--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,7 +88,7 @@
 	<!--	End Navbar-->
 
 	<section id="featured" class="my-5 pt-5">
-		<div class="container">
+		<div class="container pt-5">
 			<h2 class="font-weight-bold">Address of Trust in Insurance</h2>
 			<hr>
 			<p>Here you can check out our insurance options.</p>
