--- a/src/main/resources/templates/userPage.html
+++ b/src/main/resources/templates/userPage.html
@@ -194,7 +194,7 @@
 						<div class="user-settings mb-2">
 							<a type="button" class="btn btn-outline-info"
 								th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}">Edit</a>
-							<a type="button" class="btn btn-outline-danger ms-1"
+							<a type="button" class="btn btn-outline-danger"
 								th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}">Delete</a>
 						</div>
 					</div>
