--- a/src/main/resources/templates/seeHealthInsuranceDetails.html
+++ b/src/main/resources/templates/seeHealthInsuranceDetails.html
@@ -212,7 +212,7 @@
 	</div>
 
 	<!-- Footer -->
-	<footer class="mt-4 py-4">
+	<footer>
 		<div class="row container mx-auto pt-4">
 			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
