--- a/src/main/resources/templates/customerRegister.html
+++ b/src/main/resources/templates/customerRegister.html
@@ -80,7 +80,7 @@
 		<div class="wrapper py-5">
 			<div class="card">
 				<div class="card-body">
-					<h2 class="title">Customer Registration Form</h2>
+					<h2 class="title mb-4">Customer Registration Form</h2>
 					<form th:action="@{/customerRegister}" th:object="${customer}" method="post" ng-submit="register()"
 						name="myForm">
 
@@ -352,7 +352,7 @@
 			</div>
 			<div class="copyright mt-2">
 				<div class="row container mx-auto">
-					<div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
+					<div class="col-lg-4 col-md-6 col-12 mb-2">
 						<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
 					</div>
 				</div>
