--- a/src/main/resources/templates/userPage.html
+++ b/src/main/resources/templates/userPage.html
@@ -73,7 +73,7 @@
 	</nav>
 	<!--	End Navbar-->
 
-<div class="user-page-wrapper">
+<div class="user-page-wrapper py-5 mt-5">
 	<div class="user-page-main" th:each="c :${customer}">
 		<!-- Car Modal -->
 		<div class="modal fade" id="myModal" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog"
@@ -406,7 +406,7 @@
 		</div>
 		<div class="copyright mt-2">
 			<div class="row container mx-auto">
-				<div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
+				<div class="col-lg-4 col-md-6 col-12 mb-2">
 					<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
 				</div>
 			</div>
