--- a/src/main/resources/templates/seeCarInsuranceDetails.html
+++ b/src/main/resources/templates/seeCarInsuranceDetails.html
@@ -2,15 +2,14 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.com">
 
 <head>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SBM</title>
 
 	<!-- Bootsrapt -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 	<!-- İcon -->
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -18,7 +17,6 @@
 	<link rel="stylesheet" th:href="@{/css/register.css}" href="src/main/resources/static/css/register.css">
 	<!-- Angularjs -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 	<!--	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"-->
 	<!--		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"-->
@@ -29,21 +27,6 @@
 	<!--	<link rel="stylesheet" href="" th:href="@{/css/style.css}">-->
 
 	<style>
-		#icon-trash {
-			color: red;
-			font-size: 22px;
-		}
-
-		#icon-trash:hover {
-			color: rgb(255, 62, 62);
-		}
-
-		#trash {
-			border: none;
-			background: none;
-			margin-left: 50px;
-		}
-
 		#period {
 			width: 200px;
 			padding: 8px;
@@ -151,10 +134,25 @@
 	<div class="user-page-wrapper">
 		<div class="user-page-main" th:each="c :${customer}">
 			<div class="user-title">
-				<span class="username-text" th:text="${c.username}"></span>
+				<!--<span class="username-text" th:text="${c.username}"></span>
 				<div class="select-type"><a th:href="@{/selectType(customerId=${c.customerId})}"><span
-							class="badge text-bg-primary">Get Insurance Quote</span></a></div>
+							class="badge text-bg-primary">Get Insurance Quote</span></a></div>-->
+				<div class="username-settings">
+	              <button onclick="goBack()"><span class="badge text-bg-secondary"><i class='bx bx-arrow-back'></i></span></button>
+	              <span class="username-text" th:text="${c.username}"></span>
+	            </div>
+	            <div class="select-type">
+	              <a href="#"><span class="badge text-bg-info">Insurance Renew</span></a>
+	            </div>
 			</div>
+			<!--Alert Message-->
+			<div class="alert alert-warning insurance-error d-flex align-items-center" role="alert">
+          	  <i class='bx bxs-error' ></i>
+	          <div>
+	            An example warning alert with an icon
+	          </div>
+	        </div>
+			
 			<div class="user-page">
 				<!-- User Bilgileri -->
 				<div class="user-details">
@@ -234,7 +232,7 @@
 									<td th:text="${i.period}"></td>
 									<td><button id="trash" class="mx-auto"><a
 												th:href="@{/carInsuranceRefund/{id}(id=${i.insuranceId})}"><i
-													id="icon-trash" class="bx bx-trash"></i></a></button></td>
+													id="icon-trash" class="bx bx-trash trash"></i></a></button></td>
 								</tr>
 							</tbody>
 						</table>
@@ -294,7 +292,7 @@
 			</div>
 			<div class="copyright mt-2">
 				<div class="row container mx-auto">
-					<div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
+					<div class="col-lg-4 col-md-6 col-12 mb-2">
 						<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
 					</div>
 				</div>
