--- a/src/main/resources/templates/seeHomeInsuranceDetails.html
+++ b/src/main/resources/templates/seeHomeInsuranceDetails.html
@@ -2,8 +2,10 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.com">
 
 <head>
-	<meta charset="utf-8">
-	<title>SBM Home</title>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>SBM</title>
+	
 	<!-- Bootsrapt -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
@@ -31,21 +33,6 @@
 
 <!--	<link rel="stylesheet" href="" th:href="@{/css/style.css}">-->
 	<style>
-		#icon-trash {
-			color: red;
-			font-size: 22px;
-		}
-
-		#icon-trash:hover {
-			color: rgb(255, 62, 62);
-		}
-
-		#trash {
-			border: none;
-			background: none;
-			margin-left: 50px;
-		}
-
 		#period {
 			width: 200px;
 			padding: 8px;
@@ -155,10 +142,25 @@
 	<div class="user-page-wrapper">
 		<div class="user-page-main" th:each="c :${customer}">
 			<div class="user-title">
-				<span class="username-text" th:text="${c.username}"></span>
+				<!--<span class="username-text" th:text="${c.username}"></span>
 				<div class="select-type"><a th:href="@{/selectType(customerId=${c.customerId})}"><span
-							class="badge text-bg-primary">Get Insurance Quote</span></a></div>
+							class="badge text-bg-primary">Get Insurance Quote</span></a></div>-->
+				<div class="username-settings">
+	              <button onclick="goBack()"><span class="badge text-bg-secondary"><i class='bx bx-arrow-back'></i></span></button>
+	              <span class="username-text" th:text="${c.username}"></span>
+	            </div>
+	            <div class="select-type">
+	              <a href="#"><span class="badge text-bg-info">Insurance Renew</span></a>
+	            </div>
 			</div>
+			<!--Alert Message-->
+			<div class="alert alert-warning insurance-error d-flex align-items-center" role="alert">
+          	  <i class='bx bxs-error' ></i>
+	          <div>
+	            An example warning alert with an icon
+	          </div>
+	        </div>
+	        
 			<div class="user-page">
 				<!-- User Bilgileri -->
 				<div class="user-details">
@@ -238,7 +240,7 @@
 									<td th:text="${i.period}"></td>
 									<td><button id="trash" class="mx-auto"><a
 												th:href="@{/homeInsuranceRefund/{id}(id=${i.insuranceId})}"><i
-													id="icon-trash" class="bx bx-trash"></i></a></button></td>
+													id="icon-trash" class="bx bx-trash trash"></i></a></button></td>
 								</tr>
 							</tbody>
 						</table>
@@ -250,7 +252,7 @@
 	</div>
 
 	<!-- Footer -->
-	<footer class="mt-4 py-4">
+	<footer>
 		<div class="row container mx-auto pt-4">
 			<div class="footer-one col-lg-3 col-md-5 col-12 mb-3">
 				<img src="img/logo.png" alt="">
@@ -296,7 +298,7 @@
 			</div>
 			<div class="copyright mt-2">
 				<div class="row container mx-auto">
-					<div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
+					<div class="col-lg-4 col-md-6 col-12 mb-2">
 						<p>Eda Nur Mutlu eInsurance © 2023. All Rights Reserved</p>
 					</div>
 				</div>
